# tools

./: .gitignore  autoClicker.py  collectPPSM.cmd  flaskLocation.py  personal-webpage.html  resetperms.sh  rhel7NVIDIA.txt  stockHistory.py  stocks.py  yFinance.py
PPSM/: collectPPSM.sh
business/: 1099test.html
cache_detector/: README.md  examples.py  install.bat  install.sh  proxy_cache_detector.py
cache_detector/docs/: GETTING_STARTED.md  INDEX.md  PLATFORM_COMPATIBILITY.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md
fail2ban/: README.md  Third_party_licenses.md  fail2ban_installer.py  generate_bad_ip_lists.py  generate_cloudpanel_f2b_jails.py  ip.txt  ip_merge.py  sync_ip_data.py
finance/: stockHistory.py
nas_tools/: README.md  pyproject.toml  setup.py
nas_tools/nas_tools/: __init__.py  config.xml  wd_discovery.py  wd_mount.py
outlook/: README.md  outlook_batch_delete.py
passwords/: README.md  check_passwords_pwned.py
timezones/: .dockerignore  Dockerfile  GeoIP.conf  README.md  check_database_encoding.py  docker-compose.yml  download_geodb.py  forward_geocode.py  ip_timezone_lookup.py  main.py  requirements.txt  reverse_geocode.py  reverse_geocode_cache.py  setup-docker.sh  setup-podman.sh  test_forward_geocode.py  test_international_geocode.py  test_reverse_geocode.py  timezone-api-podman.service  timezone-api.service
timezones/.claude/: settings.local.json
website audit tool/: README.md  install_and_run.bat  run_audit.bat  sample_urls.txt  site_audit.py
